# hike

./: .gitignore  dune-project  ppllvm.opam  shell.nix
sim/: deobf.opam  dune-project
sim/src/: Makefile  O0_to_03.txt  O0_to_arm.txt  O0_to_m32.txt  O3_to_arm.txt  O3_to_m32.txt  arm_to_O0.txt  bin1_norm  bin2_norm  dune  leafs.mli  m32_to_arm.txt  normalize.ml  normalize.mli  ppllvm.ml  sim.ml  test.sh
sim/src/deobf/: FunctionZ3.ml  ListZ3.ml  Makefile  NumberZ3.ml  SeqZ3.ml  deadcode.ml  dune  smt.ml
sim/src/progs/: factorial  factorial.c  factorial32  factorial_opaque  factorial_opaque.c  factorial_tigress.c  fizzbuzz.c  fizzbuzz_2  fizzbuzz_3  fizzbuzz_32  fizzbuzz_clang  fizzbuzz_safe_01  fizzbuzz_safe_03  fizzbuzz_skylake
src/: Makefile  bil2llvm.ml  calling_conventions.ml  cdecl_gnu_abi.ml  converted.ll  convutils.ml  decl_parser.ml  decl_parser.mli  dune  factorial.ll  factorial_llvm  factorial_llvmO0  gnu64_abi.ml  header_parser.ml  headers_output.json  hike.ml  jmps.smt2  leafs.ml  ppllvm.ml  reachable_funcs.ml  sim.ml  stdio_headers.ll  targetutils.ml  x86Regs.ml
src/deobf/: ArrayZ3.ml  BitVectorZ3.ml  BooleanZ3.ml  FloatZ3.ml  GenericZ3.ml  SolverZ3.ml
src/plugins/: ppllvm.plugin
src/progs/: factorial.c  factorial32  factorial_0  fizzbuzz.c  fizzbuzz.ll  fizzbuzz_0  fizzbuzz_1  fizzbuzz_safe  fizzbuzz_safe.c  list.c  printf.c  struct.c
tests/: alias_test.ml  cdecl_gnu_test.ml  dune  gnu64abi_test.ml  header_parser_test.ml  parser_test.ml  stdio_headers.ll
